[add] progress bar

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -67,7 +67,7 @@
   },
   "prettier": {
     "singleQuote": true,
-    "arrowParens": "always",
+    "arrowParens": "avoid",
     "bracketSpacing": true,
     "endOfLine": "lf",
     "htmlWhitespaceSensitivity": "css",
